# Chess

./: .gitignore  CMakeLists.txt  README.md  a.cpp  format.sh  main.cpp
Test/: Main_Folder_Path_For_Testing.h
Test/Implementation/: Perft.h
Test/Implementation/debugHelperFuncs/: PerftHelperFuncs.h
Test/gtest/: BasicPieceLogic.cpp  EvalTest.cpp  Magic_Number_Test.cpp  Makefile  ParsingTest.cpp  Perft_Test.cpp  StandardPerftTest.cpp  Team_getEnemyTeam_Test.cpp  UndoPerftTest.cpp  correctConstants.cpp  main.cpp
Test/gtest/datasets/: ParsingTestData.txt
src/: AdjacentPieces.h  ChessConstants.h  ChessGame.h  Defines.h  MainGameLoop.cpp  MainGameLoop.h  Makefile  main.cpp
src/Board/: Board.h  Board_Correctness.h
src/Board/Board_impl/: Board_8x8.h  Board_Extra.h  Board_Positions.h
src/Bot/Evaluation/: Evaluate.cpp  Evaluate.h  pesto_tables.h
src/Bot/MinMax/: MinMax.cpp  MinMax.h
src/Check/: Check.cpp  Check.h  CheckMate.h
src/IO/Parser/: FenParsing.cpp  FenParsing.h  FenParsingException.h  StringParsing.h
src/IO/Print/: Print.cpp  Print.h
src/PossibleMoves/: PossibleMoves.cpp  PossibleMoves.h
src/Types/: BasicChessTypes.h  ChessConstants.h  SlimOptional.h  Vec2.h
src/Types/Move/: ExecutedMove.h  Move.h  UserMove.h
